syntax = "proto3";

package borrow;

option go_package = "./borrow";

import "google/protobuf/timestamp.proto";

message borrowReq {
  string book = 1;
}

message borrowResp {
  int64 id = 1;
  string book = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

service borrower {
  rpc add(borrowReq) returns(borrowResp);
  rpc list(borrowReq) returns (stream borrowResp);
}